--- a/schedule/index.html
+++ b/schedule/index.html
@@ -34,7 +34,275 @@
 		<!---------------------------------------------------------------------------------------------------------------->
 		<main>
 			<div id="content">
-				
+				<table id="desktop_schedule_table">
+					<thead>
+						<tr>
+							<th class="week">Week</th>
+							<th class="topic">Topic</th>
+							<th class="assigned">Assigned Work/Studios</th>
+							<th class="deadlines">Deadlines</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="week">Week 1</td>
+							<td class="topic">Intro to XML/Kotlin</td>
+							<td class="assigned">None</td>
+							<td class="deadlines">None</td>
+						</tr>
+						<tr>
+							<td class="week">Week 2</td>
+							<td class="topic">Intro to XML/Kotlin</td>
+							<td class="assigned">Studio 1</td>
+							<td class="deadlines">Studio due at end of class</td>
+						</tr>
+						<tr>
+							<td class="week">Week 3</td>
+							<td class="topic">Web APIs, Firebase, Threads, Async Tasks, SQLite, and Loaders</td>
+							<td class="assigned">None</td>
+							<td class="deadlines">None</td>
+						</tr>
+						<tr>
+							<td class="week">Week 4</td>
+							<td class="topic">List Views and Loading Data</td>
+							<td class="assigned">Project 1.1</td>
+							<td class="deadlines">None</td>
+						</tr>
+						<tr>
+							<td class="week">Week 5</td>
+							<td class="topic">Fragments, Activities, and Navigation</td>
+							<td class="assigned">Studio 2 / Project 1.2</td>
+							<td class="deadlines">Studio due at end of class</td>
+						</tr>
+						<tr>
+							<td class="week">Week 6</td>
+							<td class="topic">Working with Resources: Intermediate</td>
+							<td class="assigned">None</td>
+							<td class="deadlines">Project 1.1 Due</td>
+						</tr>
+						<tr>
+							<td class="week">Week 7</td>
+							<td class="topic">Animations</td>
+							<td class="assigned">Project 2</td>
+							<td class="deadlines">Project 1.2 Due</td>
+						</tr>
+						<tr>
+							<td class="week">Week 8</td>
+							<td class="topic">Project Workday</td>
+							<td class="assigned">None</td>
+							<td class="deadlines">None</td>
+						</tr>
+						<tr>
+							<td class="week">Week 9</td>
+							<td class="topic">User Experience</td>
+							<td class="assigned">None</td>
+							<td class="deadlines">None</td>
+						</tr>
+						<tr>
+							<td class="week">Week 10</td>
+							<td class="topic">Data and Refactoring</td>
+							<td class="assigned">Studio 3</td>
+							<td class="deadlines">Studio due at end of class</td>
+						</tr>
+						<tr>
+							<td class="week">Week 11</td>
+							<td class="topic">Project Proposals</td>
+							<td class="assigned">Final Project</td>
+							<td class="deadlines">Project 2 Due</td>
+						</tr>
+						<tr>
+							<td class="week">Week 12</td>
+							<td class="topic">Project Workday</td>
+							<td class="assigned">None</td>
+							<td class="deadlines">Show Final Project Progress</td>
+						</tr>
+						<tr>
+							<td class="week">Week 13</td>
+							<td class="topic">Project Workday</td>
+							<td class="assigned">None</td>
+							<td class="deadlines">Show Final Project Progress</td>
+						</tr>
+						<tr>
+							<td class="week">Week 14</td>
+							<td class="topic">Project Workday</td>
+							<td class="assigned">None</td>
+							<td class="deadlines">Final Projects Due</td>
+						</tr>
+						<tr>
+							<td class="week">Week 15</td>
+							<td class="topic">Project Presentations</td>
+							<td class="assigned">None</td>
+							<td class="deadlines">Presentations Due</td>
+						</tr>
+					</tbody>
+				</table>
+				<div id="mobile_schedule_grid">
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 1</h1>
+							<h2>Topic:</h2>
+							<h3>Intro to XML/Kotlin</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>None</h3>
+							<h2>Deadlines:</h2>
+							<h3>None</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 2</h1>
+							<h2>Topic:</h2>
+							<h3>Intro to XML/Kotlin</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>Studio 1</h3>
+							<h2>Deadlines:</h2>
+							<h3>Studio due at end of class</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 3</h1>
+							<h2>Topic:</h2>
+							<h3>Web APIs, Firebase, Threads, Async Tasks, SQLite, and Loaders</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>None</h3>
+							<h2>Deadlines:</h2>
+							<h3>None</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 4</h1>
+							<h2>Topic:</h2>
+							<h3>List Views and Loading Data</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>Project 1.1</h3>
+							<h2>Deadlines:</h2>
+							<h3>None</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 5</h1>
+							<h2>Topic:</h2>
+							<h3>Fragments, Activities, and Navigation</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>Studio 2 / Project 1.2</h3>
+							<h2>Deadlines:</h2>
+							<h3>Studio due at end of class</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 6</h1>
+							<h2>Topic:</h2>
+							<h3>Working with Resources: Intermediate</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>None</h3>
+							<h2>Deadlines:</h2>
+							<h3>Project 1.1 Due</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 7</h1>
+							<h2>Topic:</h2>
+							<h3>Animations</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>Project 2</h3>
+							<h2>Deadlines:</h2>
+							<h3>Project 1.2 Due</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 8</h1>
+							<h2>Topic:</h2>
+							<h3>None</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>None</h3>
+							<h2>Deadlines:</h2>
+							<h3>None</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 9</h1>
+							<h2>Topic:</h2>
+							<h3>User Experience</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>None</h3>
+							<h2>Deadlines:</h2>
+							<h3>None</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 10</h1>
+							<h2>Topic:</h2>
+							<h3>Data and Refactoring</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>Studio 3</h3>
+							<h2>Deadlines:</h2>
+							<h3>Studio due at end of class</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 11</h1>
+							<h2>Topic:</h2>
+							<h3>Project Proposals</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>Final Project</h3>
+							<h2>Deadlines:</h2>
+							<h3>Project 2 Due</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 12</h1>
+							<h2>Topic:</h2>
+							<h3>Project Workday</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>None</h3>
+							<h2>Deadlines:</h2>
+							<h3>Show Final Project Progress</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 13</h1>
+							<h2>Topic:</h2>
+							<h3>Project Workday</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>None</h3>
+							<h2>Deadlines:</h2>
+							<h3>Show Final Project Progress</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 14</h1>
+							<h2>Topic:</h2>
+							<h3>Project Workday</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>None</h3>
+							<h2>Deadlines:</h2>
+							<h3>Final Projects Due</h3>
+						</div>
+					</div>
+					<div class="schedule_block">
+						<div class="block_content">
+							<h1>Week 15</h1>
+							<h2>Topic:</h2>
+							<h3>Project Presentations</h3>
+							<h2>Assigned Work/Studio:</h2>
+							<h3>None</h3>
+							<h2>Deadlines:</h2>
+							<h3>Presentations Due</h3>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div id="shadow_div"></div>
