made links prettier

--- a/projects/index.html
+++ b/projects/index.html
@@ -12,10 +12,10 @@
 		<!---------------------------------------------------  NAV  ------------------------------------------------------>
 		<!---------------------------------------------------------------------------------------------------------------->
 		<nav id="expanded_menu">
-			<a href="../index.html" id="nav_overview" class="nav_item">Overview</a>
-			<a href="../schedule/index.html" id="nav_schedule" class="nav_item">Schedule</a>
-			<a href="../projects/index.html" id="nav_projects" class="nav_item selected">Projects</a>
-			<a href="../resources/index.html" id="nav_resources" class="nav_item">Resources</a>
+			<a href="../ id="nav_overview" class="nav_item">Overview</a>
+			<a href="../schedule/" id="nav_schedule" class="nav_item">Schedule</a>
+			<a href="../projects/" id="nav_projects" class="nav_item selected">Projects</a>
+			<a href="../resources/" id="nav_resources" class="nav_item">Resources</a>
 		</nav>
 		<nav id="hamburger_menu">
 			<div>
