--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<!---------------------------------------------------------------------------------------------------------------->
 		<nav id="expanded_menu">
 			<a href="#" id="nav_overview" class="nav_item selected">Overview</a>
-			<a href="./schedule/index.html" id="nav_schedule" class="nav_item">Schedule</a>
-			<a href="./projects/index.html" id="nav_projects" class="nav_item">Projects</a>
-			<a href="./resources/index.html" id="nav_resources" class="nav_item">Resources</a>
+			<a href="./schedule/" id="nav_schedule" class="nav_item">Schedule</a>
+			<a href="./projects/" id="nav_projects" class="nav_item">Projects</a>
+			<a href="./resources/" id="nav_resources" class="nav_item">Resources</a>
 		</nav>
 		<nav id="hamburger_menu">
 			<div>
