--- a/resources/index.html
+++ b/resources/index.html
@@ -34,7 +34,27 @@
 		<!---------------------------------------------------------------------------------------------------------------->
 		<main>
 			<div id="content">
-				
+				<div id="code_gists">
+					<h1>Code Gists</h1>
+
+					<h2>XML</h2>
+					<ul>
+						<li><a href="https://gist.github.com/therald/6c02b592eaced294df1c93e947061130">Drawer Layout</a></li>
+					</ul>
+
+					<h2>Kotlin</h2>
+					<ul>
+						<li><a href="https://gist.github.com/therald/8ecb60ff09eca7982b390b15112b739e">Getting Started with TryKotlin</a></li>
+					</ul>
+				</div>
+				<div id="useful_links">
+					<h1>Useful Links</h1>
+					<ul>
+						<li><a href="https://try.kotlinlang.org/">TryKotlin</a></li>
+						<li><a href="https://kotlinlang.org/docs/reference/">Kotlin Documentation</a></li>
+						<li><a href="https://developer.android.com/about/dashboards/">Android API Usage Distribution</a></li>
+					</ul>
+				</div>
 			</div>
 
 			<div id="shadow_div"></div>
