--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 				<h3>September 2, 2018</h3>
 				<p>
-					Before class on Wednesday, 9/5, I would like for all of you to join the Slack channel I have created <a href="https://join.slack.com/t/taylorherald/shared_invite/enQtNDI4MDQ2NzYzMTQxLTFhZjFjNTI2MzgzYzIwYjRlOThiOWI2NjhhMzFjMDg1NDg0N2I3YjNjMGVmNWJhZjhhMjM0YmRlMDIyZWI2ZGM">here</a> (the link will expire in <b>7 days</b>). We will use this as a means of collaborating for the duration of the semester unless there are any objections<br><br>
+					Before class on Wednesday, 9/5, I would like for all of you to join the Slack channel I have created <a href="https://join.slack.com/t/taylorherald/shared_invite/enQtNDI4MDQ2NzYzMTQxLTFhZjFjNTI2MzgzYzIwYjRlOThiOWI2NjhhMzFjMDg1NDg0N2I3YjNjMGVmNWJhZjhhMjM0YmRlMDIyZWI2ZGM" target="blank">here</a> (the link will expire in <b>7 days</b>). We will use this as a means of collaborating for the duration of the semester unless there are any objections<br><br>
 					I would also like for you each to set up an emulator on your machines that runs API 27 Oreo. To do this, simply create a new Android app through Android Studio and, after the Gradle build process has completed, attempt to run or debug the app. This will bring up a prompt that will show a button to create a new virtual device. From here, just follow with the defaults once you have downloaded API 27.<br><br>
 					Lastly, take a look at the resources tab and play around!
 
