--- a/projects/index.html
+++ b/projects/index.html
@@ -34,7 +34,14 @@
 		<!---------------------------------------------------------------------------------------------------------------->
 		<main>
 			<div id="content">
-				
+				<h2 class="studios">Studios</h2>
+				<ul>
+					<li><a href="./studio_1">Studio 1</a></li>
+				</ul>
+
+				<h2>Projects</h2>
+
+
 			</div>
 
 			<div id="shadow_div"></div>
