modified some things

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -54,7 +54,7 @@
 							<td class="week">Week 2</td>
 							<td class="topic">Intro to XML/Kotlin</td>
 							<td class="assigned"><a href="../projects/studio_1">Studio 1</a></td>
-							<td class="deadlines">Studio due at end of class</td>
+							<td class="deadlines">Studio due at 11:59PM the day after class</td>
 						</tr>
 						<tr>
 							<td class="week">Week 3</td>
@@ -72,7 +72,7 @@
 							<td class="week">Week 5</td>
 							<td class="topic">Fragments, Activities, and Navigation</td>
 							<td class="assigned">Studio 2 / Project 1.2</td>
-							<td class="deadlines">Studio due at end of class</td>
+							<td class="deadlines">Studio due at 11:59PM the day after class</td>
 						</tr>
 						<tr>
 							<td class="week">Week 6</td>
@@ -102,7 +102,7 @@
 							<td class="week">Week 10</td>
 							<td class="topic">Data and Refactoring</td>
 							<td class="assigned">Studio 3</td>
-							<td class="deadlines">Studio due at end of class</td>
+							<td class="deadlines">Studio due at 11:59PM the day after class</td>
 						</tr>
 						<tr>
 							<td class="week">Week 11</td>
