--- a/projects/studio_1/index.html
+++ b/projects/studio_1/index.html
@@ -54,6 +54,16 @@
 					The goal of this studio is to make a simple game of Blackjack. The dealer will be simply coded to hit if their score is under 17. You, the player, will be the only other participant of the game.<br><br>
 					When the game begins, your two cards will both be visible to you, but only the second of the dealer's cards will be visible. There should be a button to "Hit" and a button to "Pass". When a player "Hits" and the game does not end, the player should have three cards shown; if the game does end, a message should display informing the user that he/she has "Busted!". When a player "Passes", all dealer cards (new or old) should be revealed to the player, and a message should display either "You Win!" or "Dealer Wins!" depending on the situation. Regardless, upon ending the game, there should be a button to request "New Game?".
 				</p>
+
+				<h2>Resources</h2>
+				<p>
+					Coming soon.
+				</p>
+
+				<h2>Submission</h2>
+				<p>
+					I'm thinking right now the way we will handle submission is that you may zip/compress the file and direct message it to me via Slack. I will communicate with Bill to see if there is a different way he would prefer to handle this.
+				</p>
 			</div>
 
 			<div id="shadow_div"></div>
