--- a/projects/studio_1/index.html
+++ b/projects/studio_1/index.html
@@ -56,12 +56,12 @@
 				</p>
 
 				<h2>Resources</h2>
-				<p>
+				<p class="prompt_text">
 					Coming soon.
 				</p>
 
 				<h2>Submission</h2>
-				<p>
+				<p class="prompt_text">
 					I'm thinking right now the way we will handle submission is that you may zip/compress the file and direct message it to me via Slack. I will communicate with Bill to see if there is a different way he would prefer to handle this.
 				</p>
 			</div>
