added images download

--- a/projects/studio_1/index.html
+++ b/projects/studio_1/index.html
@@ -57,7 +57,7 @@
 
 				<h2>Resources</h2>
 				<p class="prompt_text">
-					Coming soon.
+					<a href="./images.zip">Card Images</a>
 				</p>
 
 				<h2>Submission</h2>
