--- a/resources/index.html
+++ b/resources/index.html
@@ -34,6 +34,12 @@
 		<!---------------------------------------------------------------------------------------------------------------->
 		<main>
 			<div id="content">
+				<div id="code_from_class">
+					<h1>Code From Class</h1>
+					<ul>
+						<li><a href="./Hangman2.zip">Hangman</a></li>
+					</ul>
+				</div>
 				<div id="code_gists">
 					<h1>Code Gists</h1>
 
