added api integration

--- a/resources/index.html
+++ b/resources/index.html
@@ -38,6 +38,7 @@
 					<h1>Code From Class</h1>
 					<ul>
 						<li><a href="./Hangman2.zip">Hangman</a></li>
+						<li><a href="./APIIntegration.zip">API Integration</a></li>
 					</ul>
 				</div>
 				<div id="code_gists">
@@ -59,6 +60,7 @@
 						<li><a href="https://try.kotlinlang.org/" target="blank">TryKotlin</a></li>
 						<li><a href="https://kotlinlang.org/docs/reference/" target="blank">Kotlin Documentation</a></li>
 						<li><a href="https://developer.android.com/about/dashboards/" target="blank">Android API Usage Distribution</a></li>
+						<li><a href="https://github.com/toddmotto/public-apis">Public APIs</a></li>
 					</ul>
 				</div>
 			</div>
