Updated Projects tab

--- a/projects/index.html
+++ b/projects/index.html
@@ -36,7 +36,7 @@
 			<div id="content">
 				<h2 class="studios">Studios</h2>
 				<ul>
-					<li><a href="./studio_1">Studio 1</a></li>
+					<li><a href="./project_1">Studio 1</a></li>
 				</ul>
 
 				<h2>Projects</h2>
