--- a/projects/project_1/index.html
+++ b/projects/project_1/index.html
@@ -34,7 +34,7 @@
 		<!---------------------------------------------------------------------------------------------------------------->
 		<main>
 			<div id="content">
-				<h1>Studio 1: Blackjack</h1>
+				<h1>Project 1: Blackjack</h1>
 
 				<h2>Rules of the Game:</h2>
 				<ul>
