--- a/schedule/index.html
+++ b/schedule/index.html
@@ -53,7 +53,7 @@
 						<tr>
 							<td class="week">Week 2</td>
 							<td class="topic">Intro to XML/Kotlin</td>
-							<td class="assigned"><a href="../projects/studio_1">Studio 1</a></td>
+							<td class="assigned"><a href="../projects/studio_1">Studio 1</a>, <a href="../projects/project_1">Project 1</a></td>
 							<td class="deadlines">Studio due at 11:59PM the day after class</td>
 						</tr>
 						<tr>
