updated project page

--- a/projects/index.html
+++ b/projects/index.html
@@ -35,11 +35,11 @@
 		<main>
 			<div id="content">
 				<h2 class="studios">Studios</h2>
-				<ul>
-					<li><a href="./project_1">Studio 1</a></li>
-				</ul>
 
 				<h2>Projects</h2>
+				<ul>
+					<li><a href="./project_1">Project 1</a></li>
+				</ul>
 
 
 			</div>
