--- a/projects/studio_2/index.html
+++ b/projects/studio_2/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-		<link rel="stylesheet" type="text/css" href="../css/styles.css">
-		<script src="../js/script.js"></script>
+		<link rel="stylesheet" type="text/css" href="../../css/styles.css">
+		<script src="../../js/script.js"></script>
 		<title>Android Application Development</title>
 	</head>
 	<body>
@@ -12,10 +12,10 @@
 		<!---------------------------------------------------  NAV  ------------------------------------------------------>
 		<!---------------------------------------------------------------------------------------------------------------->
 		<nav id="expanded_menu">
-			<a href="../" id="nav_overview" class="nav_item">Overview</a>
-			<a href="../schedule/" id="nav_schedule" class="nav_item">Schedule</a>
-			<a href="../projects/" id="nav_projects" class="nav_item selected">Projects</a>
-			<a href="../resources/" id="nav_resources" class="nav_item">Resources</a>
+			<a href="../../" id="nav_overview" class="nav_item">Overview</a>
+			<a href="../../schedule/" id="nav_schedule" class="nav_item">Schedule</a>
+			<a href="../../projects/" id="nav_projects" class="nav_item selected">Projects</a>
+			<a href="../../resources/" id="nav_resources" class="nav_item">Resources</a>
 		</nav>
 		<nav id="hamburger_menu">
 			<div>
@@ -34,18 +34,25 @@
 		<!---------------------------------------------------------------------------------------------------------------->
 		<main>
 			<div id="content">
-				<h2 class="studios">Studios</h2>
-				<ul>
-					<li><a href="./studio_1">Studio 1</a></li>
-					<li><a href="./studio_2">Studio 2</a></li>
-				</ul>
+				<h1>Studio 2: Web APIs</h1>
 
-				<h2>Projects</h2>
-				<ul>
-					<li><a href="./project_1">Project 1</a></li>
-				</ul>
+				<h2>Prompt:</h2>
+					The goal of this studio is simple: find an appropriate web API from the link in the resources and apply it to the Open Air Quality Template project. You should not only pull data from a different web API, but also create new models for any objects there might be. Note: You do not have to pull all pieces of data that are returned in the JSON from a web API; just choose a handful that you believe are relevant. 
+					<br>
+					<br>
+					One API that I found fairly easy to work with was Open Library.
+				</p>
 
+				<h2>Resources</h2>
+				<p class="prompt_text">
+					<a href="https://github.com/toddmotto/public-apis">Public APIs</a><br><br>
+					<a href="template.zip">Open Air Quality Template</a>
+				</p>
 
+				<h2>Submission</h2>
+				<p class="prompt_text">
+					Each of you will create a <b>PRIVATE</b> GitHub repository and share it with me.
+				</p>
 			</div>
 
 			<div id="shadow_div"></div>
