--- a/schedule/index.html
+++ b/schedule/index.html
@@ -58,33 +58,33 @@
 						</tr>
 						<tr>
 							<td class="week">Week 3</td>
-							<td class="topic">Web APIs, Firebase, Threads, Async Tasks, SQLite, and Loaders</td>
-							<td class="assigned">None</td>
-							<td class="deadlines">None</td>
+							<td class="topic">Web APIs, Threads, AsyncTasks, and Loaders</td>
+							<td class="assigned"><a href="../projects/studio_2">Studio 2</a></td>
+							<td class="deadlines">Studio due at 11:59PM the day after class</td>
 						</tr>
 						<tr>
 							<td class="week">Week 4</td>
-							<td class="topic">List Views and Loading Data</td>
-							<td class="assigned">Project 1.1</td>
-							<td class="deadlines">None</td>
+							<td class="topic">Fragments, Activities, Navigation, List Views, and Loading Data</td>
+							<td class="assigned">Studio 3</td>
+							<td class="deadlines">Studio due at 11:59PM the day after class</td>
 						</tr>
 						<tr>
 							<td class="week">Week 5</td>
-							<td class="topic">Fragments, Activities, and Navigation</td>
-							<td class="assigned">Studio 2 / Project 1.2</td>
-							<td class="deadlines">Studio due at 11:59PM the day after class</td>
+							<td class="topic">SQLite, Data Binding, and Shared Preferences</td>
+							<td class="assigned">Project 2</td>
+							<td class="deadlines">None</td>
 						</tr>
 						<tr>
 							<td class="week">Week 6</td>
 							<td class="topic">Working with Resources: Intermediate</td>
 							<td class="assigned">None</td>
-							<td class="deadlines">Project 1.1 Due</td>
+							<td class="deadlines">None</td>
 						</tr>
 						<tr>
 							<td class="week">Week 7</td>
 							<td class="topic">Animations</td>
-							<td class="assigned">Project 2</td>
-							<td class="deadlines">Project 1.2 Due</td>
+							<td class="assigned">Project 3</td>
+							<td class="deadlines">None</td>
 						</tr>
 						<tr>
 							<td class="week">Week 8</td>
@@ -101,14 +101,14 @@
 						<tr>
 							<td class="week">Week 10</td>
 							<td class="topic">Data and Refactoring</td>
-							<td class="assigned">Studio 3</td>
+							<td class="assigned">Studio 4</td>
 							<td class="deadlines">Studio due at 11:59PM the day after class</td>
 						</tr>
 						<tr>
 							<td class="week">Week 11</td>
 							<td class="topic">Project Proposals</td>
 							<td class="assigned">Final Project</td>
-							<td class="deadlines">Project 2 Due</td>
+							<td class="deadlines">None</td>
 						</tr>
 						<tr>
 							<td class="week">Week 12</td>
@@ -154,42 +154,43 @@
 							<h2>Topic:</h2>
 							<h3>Intro to XML/Kotlin</h3>
 							<h2>Assigned Work/Studio:</h2>
-							<h3>Studio 1</h3>
+							<h3><a href="../projects/studio_1">Studio 1</a></h3>
+							<h3><a href="../projects/project_1">Project 1</a></h3>
 							<h2>Deadlines:</h2>
-							<h3>Studio due at end of class</h3>
+							<h3>Studio due at 11:59PM the day after class</h3>
 						</div>
 					</div>
 					<div class="schedule_block">
 						<div class="block_content">
 							<h1>Week 3</h1>
 							<h2>Topic:</h2>
-							<h3>Web APIs, Firebase, Threads, Async Tasks, SQLite, and Loaders</h3>
+							<h3>Web APIs, Threads, AsyncTasks, and Loaders</h3>
 							<h2>Assigned Work/Studio:</h2>
-							<h3>None</h3>
+							<h3><a href="../projects/studio_2">Studio 2</a></h3>
 							<h2>Deadlines:</h2>
-							<h3>None</h3>
+							<h3>Studio due at 11:59PM the day after class</h3>
 						</div>
 					</div>
 					<div class="schedule_block">
 						<div class="block_content">
 							<h1>Week 4</h1>
 							<h2>Topic:</h2>
-							<h3>List Views and Loading Data</h3>
+							<h3>Fragments, Activities, Navigation, List Views, and Loading Data</h3>
 							<h2>Assigned Work/Studio:</h2>
-							<h3>Project 1.1</h3>
+							<h3>Studio 3</h3>
 							<h2>Deadlines:</h2>
-							<h3>None</h3>
+							<h3>Studio due at 11:59PM the day after class</h3>
 						</div>
 					</div>
 					<div class="schedule_block">
 						<div class="block_content">
 							<h1>Week 5</h1>
 							<h2>Topic:</h2>
-							<h3>Fragments, Activities, and Navigation</h3>
+							<h3>SQLite, Data Binding, and Shared Preferences</h3>
 							<h2>Assigned Work/Studio:</h2>
-							<h3>Studio 2 / Project 1.2</h3>
+							<h3>Project 2</h3>
 							<h2>Deadlines:</h2>
-							<h3>Studio due at end of class</h3>
+							<h3>None</h3>
 						</div>
 					</div>
 					<div class="schedule_block">
@@ -200,7 +201,7 @@
 							<h2>Assigned Work/Studio:</h2>
 							<h3>None</h3>
 							<h2>Deadlines:</h2>
-							<h3>Project 1.1 Due</h3>
+							<h3>None</h3>
 						</div>
 					</div>
 					<div class="schedule_block">
@@ -209,9 +210,9 @@
 							<h2>Topic:</h2>
 							<h3>Animations</h3>
 							<h2>Assigned Work/Studio:</h2>
-							<h3>Project 2</h3>
+							<h3>Project 3</h3>
 							<h2>Deadlines:</h2>
-							<h3>Project 1.2 Due</h3>
+							<h3>None</h3>
 						</div>
 					</div>
 					<div class="schedule_block">
@@ -242,7 +243,7 @@
 							<h2>Topic:</h2>
 							<h3>Data and Refactoring</h3>
 							<h2>Assigned Work/Studio:</h2>
-							<h3>Studio 3</h3>
+							<h3>Studio 4</h3>
 							<h2>Deadlines:</h2>
 							<h3>Studio due at end of class</h3>
 						</div>
@@ -255,7 +256,7 @@
 							<h2>Assigned Work/Studio:</h2>
 							<h3>Final Project</h3>
 							<h2>Deadlines:</h2>
-							<h3>Project 2 Due</h3>
+							<h3>None</h3>
 						</div>
 					</div>
 					<div class="schedule_block">
