--- a/resources/index.html
+++ b/resources/index.html
@@ -61,6 +61,7 @@
 						<li><a href="https://kotlinlang.org/docs/reference/" target="blank">Kotlin Documentation</a></li>
 						<li><a href="https://developer.android.com/about/dashboards/" target="blank">Android API Usage Distribution</a></li>
 						<li><a href="https://github.com/toddmotto/public-apis">Public APIs</a></li>
+						<li><a href="https://jsonformatter.curiousconcept.com/">JSON Formatter</a></li>
 					</ul>
 				</div>
 			</div>
