added more resources

--- a/resources/index.html
+++ b/resources/index.html
@@ -40,6 +40,7 @@
 						<li><a href="./Hangman2.zip">Hangman</a></li>
 						<li><a href="./APIIntegration.zip">API Integration</a></li>
 						<li><a href="./FavoriteUrlsLiveData.zip">Live Data: Favourites List</a></li>
+						<li><a href="https://github.com/udacity/ud843-QuakeReport/tree/lesson-four">Quake Report (java)</a></li>
 					</ul>
 				</div>
 				<div id="code_gists">
@@ -64,6 +65,12 @@
 						<li><a href="https://github.com/toddmotto/public-apis">Public APIs</a></li>
 						<li><a href="https://jsonformatter.curiousconcept.com/">JSON Formatter</a></li>
 						<li><a href="./ViewingTheContentsOfASQLiteDatabase">Viewing the Contents of a SQLite Database</a></li>
+						<li><a href="https://material.io/tools/icons/?style=baseline">Icon Set</a></li>
+						<li><a href="https://material.io/design/iconography/animated-icons.html#">Animated Icons</a></li>
+						<li><a href="https://material.io/design/iconography/#">Designing Icons</a></li>
+						<li><a href="https://www.materialpalette.com/colors">Easy Two-Color Picker</a></li>
+						<li><a href="https://material.io/tools/color/#!/?view.left=1&view.right=0&primary.color=26A69A&secondary.color=BDBDBD&primary.text.color=FAFAFA&secondary.text.color=000000">More In-Depth Color Picker with Legibility Detector</a></li>
+						<li><a href="https://github.com/material-components/material-components-android/tree/master/catalog/java/io/material/catalog/topappbar/res">Material Components Repo</a></li>
 					</ul>
 				</div>
 			</div>
